Fix: Footer Language selection align

--- a/css/app.css
+++ b/css/app.css
@@ -497,7 +497,8 @@ footer{
 
 .footer__language{
     padding-top: 30px;
-    display: inline-block;
+    display: flex;
+    align-items: center;
 }
 
 #language{
